--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     defaultConfig {
         applicationId "lunarempire.quadraticapp"
         minSdkVersion 15
@@ -16,6 +22,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
 }
 
