--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile files('libs/LunarmathLib-BETAv1-1.jar')
+    compile files('libs/LunarmathLib-v1-1.jar')
 }
