--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "lunarempire.quadraticapp"
+        applicationId "com.lunarempire.quadraticapp"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -31,4 +31,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile files('libs/LunarmathLib-v1-1.jar')
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-ads:9.2.0'
 }
+
+apply plugin:'com.google.gms.google-services'
