--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="lunarempire.quadraticapp">
-
+    package="com.lunarempire.quadraticapp">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
+        android:value="@integer/google_play_services_version"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QuadraticActivity">
+        <activity android:name="com.lunarempire.quadraticapp.QuadraticActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
